# enzyme_consumer_project_example

./: README.md
enzyme_library/: CMakeLists.txt  mfem.cpp  mfem.hpp  mfemConfig.cmake.in
enzyme_library_consumer/: CMakeLists.txt  main.cpp
